@@ -1,4 +1,4 @@
-/* $Id: acl.c,v 1.43 2007/01/01 08:08:41 manu Exp $ */
+/* $Id: acl.c,v 1.44 2007/01/04 23:01:46 manu Exp $ */
 
 /*
  * Copyright (c) 2004 Emmanuel Dreyfus
@@ -34,7 +34,7 @@
 #ifdef HAVE_SYS_CDEFS_H
 #include <sys/cdefs.h>
 #ifdef __RCSID
-__RCSID("$Id: acl.c,v 1.43 2007/01/01 08:08:41 manu Exp $");
+__RCSID("$Id: acl.c,v 1.44 2007/01/04 23:01:46 manu Exp $");
 #endif
 #endif
 
@@ -295,7 +295,7 @@ acl_header_strstr(ad, stage, ap, priv)
 		exit(EX_SOFTWARE);
 	}
 
-	LIST_FOREACH(h, &priv->priv_header, h_list)
+	SIMPLEQ_FOREACH(h, &priv->priv_header, h_list)
 		if (strstr(h->h_line, ad->string) != NULL)
 			return EXF_HEADER;
 	return 0;
@@ -315,7 +315,7 @@ acl_body_strstr(ad, stage, ap, priv)
 		exit(EX_SOFTWARE);
 	}
 
-	LIST_FOREACH(b, &priv->priv_body, b_list)
+	SIMPLEQ_FOREACH(b, &priv->priv_body, b_list)
 		if (strstr(b->b_lines, ad->string) != NULL)
 			return EXF_BODY;
 
@@ -380,7 +380,7 @@ acl_header_regexec(ad, stage, ap, priv)
 		exit(EX_SOFTWARE);
 	}
 
-	LIST_FOREACH(h, &priv->priv_header, h_list)
+	SIMPLEQ_FOREACH(h, &priv->priv_header, h_list)
 		if (regexec(ad->regex.re, 
 		    h->h_line, 0, NULL, 0) == 0)
 			return EXF_HEADER;
@@ -456,7 +456,7 @@ acl_body_regexec(ad, stage, ap, priv)
 		exit(EX_SOFTWARE);
 	}
 
-	LIST_FOREACH(b, &priv->priv_body, b_list)
+	SIMPLEQ_FOREACH(b, &priv->priv_body, b_list)
 		if (regexec(ad->regex.re, 
 		    b->b_lines, 0, NULL, 0) == 0)
 			return EXF_BODY;
