@@ -1,4 +1,4 @@
-%token TNUMBER ADDR IPADDR IP6ADDR CIDR FROM RCPT EMAIL PEER AUTOWHITE GREYLIST NOAUTH NOACCESSDB EXTENDEDREGEX NOSPF QUIET TESTMODE VERBOSE PIDFILE GLDUMPFILE QSTRING TDELAY SUBNETMATCH SUBNETMATCH6 SOCKET USER NODETACH REGEX REPORT NONE DELAYS NODELAYS ALL LAZYAW GLDUMPFREQ GLTIMEOUT DOMAIN DOMAINNAME SYNCADDR SYNCSRCADDR PORT ACL WHITELIST DEFAULT STAR DELAYEDREJECT DB NODRAC DRAC DUMP_NO_TIME_TRANSLATION LOGEXPIRED GLXDELAY DNSRBL LIST OPENLIST CLOSELIST BLACKLIST FLUSHADDR CODE ECODE MSG SM_MACRO UNSET URLCHECK RACL DACL HEADER BODY MAXPEEK STAT
+%token TNUMBER ADDR IPADDR IP6ADDR CIDR FROM RCPT EMAIL PEER AUTOWHITE GREYLIST NOAUTH NOACCESSDB EXTENDEDREGEX NOSPF QUIET TESTMODE VERBOSE PIDFILE GLDUMPFILE QSTRING TDELAY SUBNETMATCH SUBNETMATCH6 SOCKET USER NODETACH REGEX REPORT NONE DELAYS NODELAYS ALL LAZYAW GLDUMPFREQ GLTIMEOUT DOMAIN DOMAINNAME SYNCADDR SYNCSRCADDR PORT ACL WHITELIST DEFAULT STAR DELAYEDREJECT DB NODRAC DRAC DUMP_NO_TIME_TRANSLATION LOGEXPIRED GLXDELAY DNSRBL LIST OPENLIST CLOSELIST BLACKLIST FLUSHADDR CODE ECODE MSG SM_MACRO UNSET URLCHECK RACL DACL HEADER BODY MAXPEEK STAT POSTMSG
 
 %{
 #include "config.h"
@@ -6,7 +6,7 @@
 #ifdef HAVE_SYS_CDEFS_H
 #include <sys/cdefs.h>
 #ifdef __RCSID  
-__RCSID("$Id: conf_yacc.y,v 1.66 2007/01/01 17:29:29 manu Exp $");
+__RCSID("$Id: conf_yacc.y,v 1.67 2007/01/04 23:01:46 manu Exp $");
 #endif
 #endif
 
@@ -766,7 +766,7 @@ urlcheckdef:	URLCHECK QSTRING QSTRING TNUMBER {
 			char path2[QSTRLEN + 1];
 
 			urlcheck_def_add(quotepath(path1, $2, QSTRLEN), 
-			    quotepath(path2, $3, QSTRLEN), atoi($4));
+			    quotepath(path2, $3, QSTRLEN), atoi($4), 0);
 #else
 			mg_log(LOG_INFO, 
 			    "CURL support not compiled in line %d", 
@@ -774,6 +774,22 @@ urlcheckdef:	URLCHECK QSTRING QSTRING TNUMBER {
 #endif
 		}
 	;
+
+urlcheckdef:	URLCHECK QSTRING QSTRING TNUMBER POSTMSG {
+#ifdef USE_CURL
+			char path1[QSTRLEN + 1];
+			char path2[QSTRLEN + 1];
+
+			urlcheck_def_add(quotepath(path1, $2, QSTRLEN), 
+			    quotepath(path2, $3, QSTRLEN), atoi($4), 1);
+#else
+			mg_log(LOG_INFO, 
+			    "CURL support not compiled in line %d", 
+			    conf_line);
+#endif
+		}
+	;
+
 macrodef_regex:		SM_MACRO QSTRING QSTRING REGEX {
 				char name[QSTRLEN + 1];
 				char macro[QSTRLEN + 1];
