@@ -1,5 +1,5 @@
 .\"
-.\" $Id: greylist.conf.5,v 1.52 2007/01/01 17:29:29 manu Exp $
+.\" $Id: greylist.conf.5,v 1.53 2007/01/04 23:01:46 manu Exp $
 .\"
 .\" Copyright (c) 2004 Emmanuel Dreyfus
 .\" All rights reserved.
@@ -559,6 +559,19 @@ it is possible to overload the ACL action itself.
 The ACL will match if any of the above key is returned: 
 .I milterGreylistStatus
 is not mandatory.
+.PP
+If you use an URL check in a DATA stage ACL, you can post the message header
+and body to the URL. This is done by appending the
+.I postmsg
+keyword to the 
+.I urlcheck 
+statement, like in the example above:
+.IP
+  urlcheck "extfilter" "http://www.example.net/f.cgi" 5 postmsg
+
+  dacl blacklist urlcheck "extfilter"
+  dacl whitelist default
+.PP
 .SH CUSTOM REPORTS
 The 
 .I stat
