@@ -1,4 +1,4 @@
-/* $Id: urlcheck.c,v 1.9 2007/01/01 17:29:29 manu Exp $ */
+/* $Id: urlcheck.c,v 1.10 2007/01/04 23:01:46 manu Exp $ */
 
 /*
  * Copyright (c) 2006 Emmanuel Dreyfus
@@ -36,7 +36,7 @@
 #ifdef HAVE_SYS_CDEFS_H
 #include <sys/cdefs.h>
 #ifdef __RCSID
-__RCSID("$Id: urlcheck.c,v 1.9 2007/01/01 17:29:29 manu Exp $");
+__RCSID("$Id: urlcheck.c,v 1.10 2007/01/04 23:01:46 manu Exp $");
 #endif
 #endif
 
@@ -61,6 +61,32 @@ __RCSID("$Id: urlcheck.c,v 1.9 2007/01/01 17:29:29 manu Exp $");
 #include "conf.h"
 #include "urlcheck.h"
 
+#define BOUNDARY_LEN	4
+struct post_data {
+	struct mlfi_priv *pd_priv;
+	struct header *pd_curhdr;
+	struct body *pd_curbody;
+	char *pd_curptr;
+	int pd_done;
+	char pd_boundary[BOUNDARY_LEN + 1];
+};
+
+/* Header and trailer for POST requests */
+char post_header_templ[] = 
+    "--%s\r\n"
+    "Content-Disposition: form-data; name=\"msg\"; filename=\"msg.txt\"\r\n"
+    "Content-Type: text/plain\r\n"
+    "Content-Transfer-Encoding: binary\r\n"
+    "\r\n";
+char post_trailer_templ[] = 
+    "\r\n"
+    "--%s--\r\n";
+char post_header[sizeof(post_header_templ) - 2 + BOUNDARY_LEN];
+char post_trailer[sizeof(post_trailer_templ) - 2 + BOUNDARY_LEN];
+
+
+
+
 /* 
  * locking is done through the same lock as acllist: both are static 
  * configuration, which are readen or changed at the same times.
@@ -68,6 +94,8 @@ __RCSID("$Id: urlcheck.c,v 1.9 2007/01/01 17:29:29 manu Exp $");
 struct urlchecklist urlcheck_head;
 
 static size_t curl_outlet(void *, size_t, size_t, void *);
+static int find_boundary(struct mlfi_priv *, char *);
+static size_t curl_post(void *, size_t, size_t, void *);
 static int answer_parse(struct iovec *, struct acl_param *);
 static int answer_getline(char *, char *, struct acl_param *);
 static struct urlcheck_cnx *get_cnx(struct urlcheck_entry *);
@@ -83,10 +111,11 @@ urlcheck_init(void) {
 
 
 void
-urlcheck_def_add(name, url, max_cnx) /* acllist must be write locked */
+urlcheck_def_add(name, url, max_cnx, postmsg) /* acllist must be write locked */
 	char *name;
 	char *url;
 	int max_cnx;
+	int postmsg;
 {
 	struct urlcheck_entry *ue;
 	struct urlcheck_cnx *uc;
@@ -109,6 +138,9 @@ urlcheck_def_add(name, url, max_cnx) /* acllist must be write locked */
 	ue->u_url[sizeof(ue->u_url) - 1] = '\0';
 
 	ue->u_maxcnx = max_cnx;
+	ue->u_postmsg = postmsg;
+	if (postmsg && conf.c_maxpeek == 0)
+		conf.c_maxpeek = -1;
 
 	if ((uc = malloc(max_cnx * sizeof(*uc))) == NULL) {
 		mg_log(LOG_ERR, "malloc(%d) failed for URL check cnx pool: %s",
@@ -257,6 +289,154 @@ url_encode(url)
 }
 #endif
 
+static int
+find_boundary(priv, boundary)
+	struct mlfi_priv *priv;
+	char *boundary;
+{
+	int i;
+	struct body *b;
+	struct header *h;
+
+	for (i = 0; i < BOUNDARY_LEN; i++)
+		boundary[i] = 'a';
+	boundary[BOUNDARY_LEN] = '\0';
+
+	do {
+		SIMPLEQ_FOREACH(h, &priv->priv_header, h_list)
+			if (strstr(h->h_line, boundary) != NULL)
+				goto next;
+			
+		SIMPLEQ_FOREACH(b, &priv->priv_body, b_list)
+			if (strstr(b->b_lines, boundary) != NULL)
+				goto next;
+
+		return 0;
+next:
+		for (i = 0; i < BOUNDARY_LEN; i++) {
+			if (boundary[i] == 'z') {
+				boundary[i] = 'a';
+			} else {
+				boundary[i]++;
+				break;
+			}
+		}
+
+		/* Failure to find a proper boundary */
+		if (i == BOUNDARY_LEN)
+			return -1;
+
+	} while (/*CONSTCOND*/ 1);
+}
+
+static size_t
+curl_post(buffer, size, nmemb, userp)
+	void  *buffer;
+	size_t size;
+	size_t nmemb;
+	void *userp;
+{
+	struct post_data *pd;
+	size_t len = 0;
+
+	pd = (struct post_data *)userp;
+
+	/* First time */
+	if ((pd->pd_curhdr != NULL) && (pd->pd_curptr == NULL)) {
+		len = sizeof(post_header) - 1;
+		if (size * nmemb < len) {
+			mg_log(LOG_ERR, "libcurl frag too small");
+			exit(EX_OSERR);
+		}
+		snprintf(buffer, len, post_header_templ, pd->pd_boundary);
+		pd->pd_curptr = pd->pd_curhdr->h_line;
+		goto finish;
+	}
+
+	/* We are currently doing headers */
+	if (pd->pd_curhdr != NULL) {
+		len = strlen(pd->pd_curptr);
+		if (len <= size * nmemb) {
+			/*
+			 * we copy everything we need and move
+			 * to the next header line.
+			 */
+			if (len > 0)
+				memcpy(buffer, pd->pd_curptr, len);
+
+			pd->pd_curhdr = SIMPLEQ_NEXT(pd->pd_curhdr, h_list);
+
+			/* 
+			 * If there are no more headers, we will move to
+			 * the body on next time we are called.
+			 */
+			if (pd->pd_curhdr == NULL) 
+				pd->pd_curptr = pd->pd_curbody->b_lines;
+			else
+				pd->pd_curptr = pd->pd_curhdr->h_line;
+
+		} else { /* (len > size * nmemb) */
+			/* 
+			 * More data to write than buffer size,
+			 * copy everything we can
+			 */
+			len = (size * nmemb);
+			memcpy(buffer, pd->pd_curptr, len);
+			pd->pd_curptr += len;
+		}
+		goto finish;
+	}
+
+	/* We are currently processing body */
+	if (pd->pd_curbody != NULL) {
+		len = strlen(pd->pd_curptr);
+
+		if (len <= size * nmemb) {
+			/* Copy the whole chunk */
+			memcpy(buffer, pd->pd_curptr, len);
+
+			/* Move to the next one */
+			pd->pd_curbody = 
+			    SIMPLEQ_NEXT(pd->pd_curbody, b_list);
+
+			/* If it's not the last one... */
+			if (pd->pd_curbody != NULL)
+				pd->pd_curptr = pd->pd_curbody->b_lines;
+			else
+				pd->pd_curptr = NULL;
+		} else {
+			/* 
+			 * Copy everything we have 
+			 * strncpy is used without adding the \0 on purpose
+			 */
+			strncpy(buffer, pd->pd_curptr, len);
+
+			pd->pd_curptr += len;
+		}
+		goto finish;
+	}
+
+	/* Body is done, do trailer */
+	if ((pd->pd_curbody == NULL) && (!pd->pd_done)) {
+		len = sizeof(post_trailer) - 1;
+		if (size * nmemb < len) {
+			mg_log(LOG_ERR, "libcurl frag too small");
+			exit(EX_OSERR);
+		}
+		snprintf(buffer, len, post_trailer_templ, pd->pd_boundary);
+
+		pd->pd_done = 1;
+
+		goto finish;
+	}
+
+	/* Job completed */
+	if (pd->pd_done)
+		len = 0;
+finish:
+	return len;
+}
+
 static size_t
 curl_outlet(buffer, size, nmemb, userp)
 	void  *buffer;
@@ -375,6 +555,7 @@ urlcheck_validate(ad, stage, ap, priv)
 	int retval = 0;
 	struct iovec data;
 	struct urlcheck_cnx *cnx;
+	struct curl_slist *headers = NULL;
 
 	rcpt = priv->priv_cur_rcpt;
 	ue = ad->urlcheck;
@@ -408,6 +589,77 @@ urlcheck_validate(ad, stage, ap, priv)
 		goto out;
 	}
 
+	if ((stage == AS_DATA) &&
+	    ue->u_postmsg && 
+	    !SIMPLEQ_EMPTY(&priv->priv_header)) {
+		struct post_data pd;
+		size_t len;
+		char head_templ[] = 
+		    "Content-Type: multipart/form-data; boundary=%s";
+		char head[sizeof(head_templ) - 2 + BOUNDARY_LEN];
+
+		if (find_boundary(priv, pd.pd_boundary) == -1) {
+			mg_log(LOG_WARNING, 
+			    "Unable to create a MIME boundary, "
+			    "not posting message");
+			goto out;
+		}
+
+		sprintf(head, head_templ, pd.pd_boundary);
+
+		if (headers == NULL)
+			headers = curl_slist_append(headers, head);
+		
+		if ((cerr = curl_easy_setopt(ch, 
+		    CURLOPT_HTTPHEADER, headers)) != CURLE_OK) {
+			mg_log(LOG_WARNING, 
+			    "curl_easy_setopt(CURLOPT_HTTPHEADERS) "
+			    "failed; %s", curl_easy_strerror(cerr));
+			goto out;
+		}
+
+		if ((cerr = curl_easy_setopt(ch, 
+		    CURLOPT_POST, 1)) != CURLE_OK) {
+			mg_log(LOG_WARNING, 
+			    "curl_easy_setopt(CURLOPT_POST) "
+			    "failed; %s", curl_easy_strerror(cerr));
+			goto out;
+		}
+
+		len = sizeof(post_header) - 1 
+		    + priv->priv_msgcount
+		    + sizeof(post_trailer) - 1;
+		if ((cerr = curl_easy_setopt(ch, 
+		    CURLOPT_POSTFIELDSIZE, len)) != CURLE_OK) {
+			mg_log(LOG_WARNING, 
+			    "curl_easy_setopt(CURLOPT_POSTFIELDSIZE) "
+			    "failed; %s", curl_easy_strerror(cerr));
+			goto out;
+		}
+
+		if ((cerr = curl_easy_setopt(ch, 
+		    CURLOPT_READFUNCTION, curl_post)) != CURLE_OK) {
+			mg_log(LOG_WARNING, 
+			    "curl_easy_setopt(CURLOPT_READFUNCTION) "
+			    "failed; %s", curl_easy_strerror(cerr));
+			goto out;
+		}
+
+		pd.pd_priv = priv;
+		pd.pd_curhdr = SIMPLEQ_FIRST(&priv->priv_header);
+		pd.pd_curbody = SIMPLEQ_FIRST(&priv->priv_body);
+		pd.pd_curptr = NULL;
+		pd.pd_done = 0;
+
+		if ((cerr = curl_easy_setopt(ch, 
+		    CURLOPT_READDATA, (void *)&pd)) != CURLE_OK) {
+			mg_log(LOG_WARNING, 
+			    "curl_easy_setopt(CURLOPT_READDATA) "
+			    "failed; %s", curl_easy_strerror(cerr));
+			goto out;
+		}
+	}
+
 	if ((cerr = curl_easy_perform(ch)) != CURLE_OK) {
 		mg_log(LOG_WARNING, "curl_easy_perform() failed; %s",
 		    curl_easy_strerror(cerr));
@@ -421,6 +673,9 @@ urlcheck_validate(ad, stage, ap, priv)
 
 	retval = answer_parse(&data, ap);
 out:
+	if (headers != NULL)
+		curl_slist_free_all(headers);
+
 	if (pthread_mutex_unlock(&cnx->uc_lock) != 0) {
 		mg_log(LOG_ERR, "pthread_mutex_unlock failed: %s",
 		    strerror(errno));
@@ -447,43 +702,89 @@ struct iovec *data;
 	len = data->iov_len;
 	idx = 0;
 
-	linep = buf;
+	if (len == 0) {
+		mg_log(LOG_DEBUG, "ignoring blank reply");
+		return -1;
+	}
+	buf[len - 1] = '\0';	/* Prevent run-away printf */
+	len--;			/* Stop before trailing 0 */
 
-	/* strip spaces */
-	while (isspace((int)*linep))
-		linep++;
-
-	valp = NULL;
 	while (idx < len) {
-		if (buf[idx] == ':') {
-			buf[idx] = '\0';
-			valp = buf + idx + 1;
+		/* strip spaces */
+		while ((idx < len) && isspace((int)buf[idx]))
+			idx++;
+		linep = buf + idx;
 
-			/* Strip spaces */
-			while (isspace((int)*valp))
-				valp++;
+		if (idx == len)
+			break;
+
+		if (buf[idx] == '\n') {
+			idx++;
+			continue;
 		}
+
+		/* find the : */
+		while ((idx < len) && 
+		       (buf[idx] != '\n') && 
+		       (buf[idx] != ':')) 
+			idx++;
+
+		if (idx == len) 
+			break;
 
 		if (buf[idx] == '\n') {
 			buf[idx] = '\0';
-
-			if (valp == NULL) {
-				mg_log(LOG_DEBUG, 
-				    "ignoring unepxected line \"%s\"", linep);
-			} else if (answer_getline(linep, valp, ap) == -1) {
-				mg_log(LOG_DEBUG, 
-				    "ignoring unepxected \"%s\" => \"%s\"",
-				    linep, valp);
-			} else {
-				/* We have a match! */
-				retval = 1;
-			}
-			linep = buf + idx + 1;
-			while (isspace((int)*linep))
-				linep++;
+			mg_log(LOG_DEBUG, 
+			    "ignoring unexpected line \"%s\"", linep);
+			idx++;
+			continue;
 		}
 
+		/* Cut linep */
+		buf[idx] = '\0';
 		idx++;
+
+		/* Strip spaces in valp */
+		while ((idx < len) && isspace((int)buf[idx]))
+			idx++;
+		valp = buf + idx;
+
+		if (idx == len)
+			break;
+
+		if (buf[idx] == '\n') {
+			buf[idx] = '\0';
+			mg_log(LOG_DEBUG, "ignoring line \"%s: %s\"", 
+			    linep, valp);
+			idx++;
+			continue;
+		}
+
+		/* Look for end of line */
+		while ((idx < len) && 
+		       (buf[idx] != '\n'))
+			idx++;
+
+		if (idx == len) {
+			buf[idx] = '\0';
+			mg_log(LOG_DEBUG, 
+			    "ignoring unexpected line \"%s: %s\"", 
+			    linep, valp);
+			break;
+		}
+
+		/* cut valp */
+		buf[idx] = '\0';
+		idx++;
+
+		if (answer_getline(linep, valp, ap) == -1) {
+			mg_log(LOG_DEBUG, 
+			    "ignoring unepxected \"%s\" => \"%s\"",
+			    linep, valp);
+		} else {
+			/* We have a match! */
+			retval = 1;
+		}
 	}
 
 	return retval;
